unpackaged/main/default/objects/TalxInt__c/TalxInt__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TalxInt</label>
</CustomObject>