unpackaged/main/default/objects/TalxInt__c/fields/APPID__c.field-meta.xml
<CustomField>
    <fullName>APPID__c</fullName>
    <label>APPID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>