unpackaged/main/default/objects/TalxInt__c/fields/APPVER__c.field-meta.xml
<CustomField>
    <fullName>APPVER__c</fullName>
    <label>APPVER</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>