unpackaged/main/default/objects/TalxInt__c/fields/DTCLIENT__c.field-meta.xml
<CustomField>
    <fullName>DTCLIENT__c</fullName>
    <label>DTCLIENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>