unpackaged/main/default/objects/TalxInt__c/fields/LANGUAGE__c.field-meta.xml
<CustomField>
    <fullName>LANGUAGE__c</fullName>
    <label>LANGUAGE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>