unpackaged/main/default/objects/TalxInt__c/fields/TalxCertificateName__c.field-meta.xml
<CustomField>
    <fullName>TalxCertificateName__c</fullName>
    <label>TalxCertificateName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>