unpackaged/main/default/objects/TalxInt__c/fields/USERID__c.field-meta.xml
<CustomField>
    <fullName>USERID__c</fullName>
    <label>USERID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>