unpackaged/main/default/objects/TalxInt__c/fields/USERPASS__c.field-meta.xml
<CustomField>
    <fullName>USERPASS__c</fullName>
    <label>USERPASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>